--- a/lib/bower.json
+++ b/lib/bower.json
@@ -17,6 +17,7 @@
     "angular": "~1.4.4",
     "angular-filter": "~0.5.5",
     "angular-route": "~1.4.4",
+    "angular-ui-router": "~0.2.15",
     "angularfire": "~1.1.2",
     "bootstrap": "~3.3.5",
     "firebase": "~2.2.9",
