Adding dependencies for requirejs and removing unused dependencies

--- a/lib/bower.json
+++ b/lib/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "music-history-angular",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "homepage": "https://github.com/sqfish/music-history-angular",
   "authors": [
     "Sally Fisher <sqfisher@gmail.com>"
@@ -16,13 +16,11 @@
   "dependencies": {
     "angular": "~1.4.4",
     "angular-filter": "~0.5.5",
-    "angular-route": "~1.4.4",
     "angular-ui-router": "~0.2.15",
     "angularfire": "~1.1.2",
     "bootstrap": "~3.3.5",
     "firebase": "~2.2.9",
     "jquery": "~2.1.4",
-    "lodash": "~3.10.1",
-    "q": "~1.0.1"
+    "requirejs": "~2.1.20"
   }
 }
